@@ -1,3 +1,7 @@
+Major changes in 3.34.2:
+* Updated translations
+* Fix various crashers
+
 Major changes in 3.34.1:
 * Updated translations
 * Fix various crashers
